<resources>
    <string name="app_name">VegAdvisor</string>
    <string name="action_settings">Configuración</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="saltar_inicio">Saltar Inicio de Sesión</string>
    <string name="title_activity_inicio_sesion">Iniciar Sesión</string>
    <string name="title_activity_registro">Registro Usuario</string>
    <string name="title_activity_menu_principal">Menú Principal</string>
    <string name="error_conexion">Error de Conexión!</string>
    <string name="error_inicio_sesion">Nombre de Usuario o Contraseña inválido</string>
    <string name="id_usuario">Id Usuario</string>
    <string name="passwd">Contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">E-Mail</string>
    <string name="passwdConfirm">Confirmar Contraseña</string>
    <string name="campoInvalido">Valor Inválido en Campo: </string>
    <string name="passwd_not_match">Las Contraseñas no Coinciden</string>
    <string name="localizador">Localizador</string>
    <string name="cercano_a_mi">Cercano a Mí</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="eventos">Eventos</string>
    <string name="foro">Foro</string>
    <string name="chat">Chat</string>
    <string name="mis_establecimientos">Mis Establecimientos</string>
    <string name="contacto">Contacto</string>
    <string name="salir">Salir</string>
    <string name="title_activity_establecimientos">Mis Establecimientos</string>
    <string name="title_activity_perfil">Mi Perfil</string>
    <string name="imagen_inicial">Imagen Inicial</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="seleccionar_galeria">Seleccionar de Galería</string>
    <string name="cancelar">Cancelar</string>
    <string name="imagen_usuario">Imagen Usuario</string>
    <string name="usuario_invitado">Usuario Invitado</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="pais">País</string>
    <string name="ciudad">Ciudad</string>
    <string name="soy_vegano">Soy Vegano</string>
    <string name="genero">Género</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="hobbies">Hobbies</string>
    <string name="foto_perfil">Foto Perfil</string>
    <string name="crear_establecimiento">+ Establecimiento</string>
    <string name="title_activity_detalle_estab">Detalle Establecimiento</string>
    <string name="title_activity_crear_estab">Crear Establecimiento</string>
    <string name="nombre_establecimiento">Nombre Establecimiento</string>
    <string name="tipo_establecimiento">Tipo Establecimiento</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="horario">Horario</string>
    <string name="apertura">Apertura</string>
    <string name="cierre">Cierre</string>
    <string name="title_activity_cercanoa_mi">Cercano a Mí</string>
    <string name="title_activity_editar_estab">Editar Establecimiento</string>
    <string name="title_activity_estadisticas_estab">Estadísticas Establecimiento</string>
    <string name="title_activity_localizador">Localizador</string>
    <string name="title_activity_consulta_estab">Consulta Establecimiento</string>
    <string name="title_activity_registro_opinion">Registrar Opinión</string>
    <string name="title_activity_detalle_opinion">Detalle Opinión</string>
    <string name="title_activity_contacto">Información Contacto</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_conversacion">Conversación</string>
    <string name="title_activity_eventos">Eventos</string>
    <string name="title_activity_crear_evento">Crear Evento</string>
    <string name="title_activity_detalle_evento">Detalle Evento</string>
    <string name="title_activity_editar_evento">Editar Evento</string>
    <string name="title_activity_foro">Foro</string>
    <string name="title_activity_crear_hilo">Crear Hilo Foro</string>
    <string name="title_activity_detalle_hilo">Detalle Hilo</string>
    <string name="title_activity_respuesta_hilo">Respuesta Hilo Foro</string>
    <string name="descripcion">Descripción</string>
    <string name="ubicacion">Ubicación</string>
    <string name="seleccionar_ubicacion">Seleccionar esta ubicación</string>
    <string name="aceptar">Aceptar</string>
    <string name="buscar">Buscar</string>
    <string name="radio_busqueda">Radio Búsqueda</string>
    <string name="cargando_espere">Cargando. Espere...</string>
    <string name="espere">Espere</string>
    <string name="imagenes">Imagenes</string>
    <string name="confirmacion">Confirmación</string>
    <string name="confirm_check_in">Desea realizar Check-in aquí?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="opinion">Opinión</string>
    <string name="valorar_opinar">Valorar y Opinar</string>
    <string name="estrellas">Estrellas</string>
    <string name="editar_estab">Editar Establecimiento</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="editar">Editar</string>
    <string name="compartir">Compartir</string>
    <string name="texto_compartir"><![CDATA[Hola, te invito a conocer &1. Dirección: &2. Enviado desde VegAdvisor App Mobile]]></string>
    <string name="detalle_opinion">Detalle Opinión</string>
    <string name="establecimiento">Establecimiento</string>
    <string name="mensaje">Mensaje</string>
    <string name="eliminar">Eliminar</string>
    <string name="confirma_eliminar">¿Está seguro que desea eliminar la conversación?</string>
    <string name="yo">Yo</string>
    <string name="nuevo_mensaje"><![CDATA[Mensaje de &1]]></string>
    <string name="nuevos_mensajes_one"><![CDATA[&1 mensajes de &2]]></string>
    <string name="nuevos_mensajes"><![CDATA[&1 mensajes de &2 conversaciones]]></string>
    <string name="contact_phone_title">Teléfonos de contacto:</string>
    <string name="contact_phone1">Teléfono 1: +34 636 636 636</string>
    <string name="contact_phone2">Teléfono 2: +34 659 659 659</string>
    <string name="contact_email_contact">Email: vegadvisor@vegadvisor.com</string>
    <string name="contact_email_title">¡Mándanos un email!</string>
    <string name="nombre_evento">Nombre Evento:</string>
    <string name="hint_evento">Pe: Feria Vegana</string>
    <string name="tipo_evento">Tipo Evento</string>
    <string name="fecha_evento">Fecha:</string>
    <string name="hora_evento">Hora</string>
    <string name="comienzo_evento">Comienzo</string>
    <string name="finalizacion_evento">Finalización</string>
    <string name="foro_thread_title">Título Nuevo Hilo</string>
    <string name="foro_newthread_description">Descripción</string>
    <string name="detalle_titulothread">Detalle título</string>
    <string name="detalle_descriptionThread">Detalle descripción hilo</string>
    <string name="respuesta_header">Respuesta:</string>
    <string name="foro_respuesta">Respuesta...</string>
    <string name="foro_hilo">Hilo</string>
    <string name="detalle_respuesta">Detalle respuesta</string>
    <string name="crear_hilo">+ Nuevo Hilo</string>
    <string name="crear_evento">+ Evento</string>
    <string name="comentar">Comentar</string>
    <string name="comentario_evento">Escribe aquí tu comentario...</string>
    <string name="comentarios">Comentarios</string>
    <string name="comentarios_otros_usuarios">Comentarios sobre el evento por otros usuarios</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="rango_consulta">Rango Consulta</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="fecha_fin">Fecha Fin</string>
    <string name="ver">Ver</string>
    <string name="prom_checkin">Promedio Check-in</string>
    <string name="prom_estrellas">Promedio Estrellas</string>
    <string name="buscar_hilo">Buscar Hilo</string>
    <string name="localizacion">Localización</string>
    <string name="participantes">Participantes: </string>
    <string name="evento_activo">Evento Activo</string>
    <string name="asistire">Asistiré</string>
    <string name="no_asistire">No Asistiré</string>
</resources>
