<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.vegadvisor.client.MenuPrincipalActivity"
        tools:showIn="@layout/activity_menu_principal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:gravity="start"
                android:textSize="20dp"/>

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:contentDescription="@string/imagen_usuario"/>
        </LinearLayout>

        <Button
            android:id="@+id/b0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <Button
            android:id="@+id/b1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/localizador"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <Button
            android:id="@+id/b2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cercano_a_mi"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <Button
            android:id="@+id/b3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mi_perfil"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <Button
            android:id="@+id/b4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventos"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <Button
            android:id="@+id/b5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foro"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <Button
            android:id="@+id/b6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chat"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <Button
            android:id="@+id/b7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mis_establecimientos"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <Button
            android:id="@+id/b8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacto"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <Button
            android:id="@+id/b9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salir"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
    </LinearLayout>
</ScrollView>