<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.vegadvisor.client.PerfilActivity"
        tools:showIn="@layout/activity_perfil">

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="textCapWords"
            android:singleLine="true"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellido"/>

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido"
            android:inputType="textCapWords"
            android:singleLine="true"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nacimiento"/>

        <EditText
            android:id="@+id/fecha_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_nacimiento"
            android:inputType="date"
            android:singleLine="true"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pais"/>

        <AutoCompleteTextView
            android:id="@+id/pais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pais"
            android:singleLine="true"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ciudad"/>

        <AutoCompleteTextView
            android:id="@+id/ciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ciudad"
            android:singleLine="true"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genero"
            />

        <RadioGroup
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/mujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mujer"/>

            <RadioButton
                android:id="@+id/hombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hombre"/>
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soy_vegano"
                />

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent"/>

            <CheckBox
                android:id="@+id/soy_vegano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"/>

        <EditText
            android:id="@+id/hobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hobbies"
            android:inputType="textCapSentences"
            android:lines="3"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/foto_perfil"/>

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:contentDescription="@string/imagen_usuario"/>

            <ImageButton
                android:id="@+id/b1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/imagen_usuario"
                android:src="@drawable/select_image"
                />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <Button
            android:id="@+id/b2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enviar"/>
    </LinearLayout>
</ScrollView>